<resources>
    <string name="app_name">Todoer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Drawer labels -->
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_projects">Projects</string>
    <string name="drawer_add_list">Add project</string>

    <!-- Empty view labels -->
    <string name="empty_view_title_text">You`re all done for today!</string>
    <string name="empty_view_subtitle_text">Enjoy your day.</string>

    <!-- TaskEditorActivity labels -->
    <string name="editor_title">Task</string>
    <string name="editor_project">Project</string>
    <string name="editor_priority">Priority</string>
    <string name="select_priority">Select priority</string>
    <string name="priority_none">None</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="editor_date">Due Date</string>
    <string name="error_empty_task_title">Task title cannot be empty!</string>

    <!-- ProjectEditorActivity labels -->
    <string name="editor_project_name">Project</string>
    <string name="editor_project_color">Color</string>
    <string name="error_empty_project_name">Project name cannot be empty!</string>
    <string name="error_duplicate_project_name">The project with the same name already exists!</string>

    <!-- DateUtility labels -->
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="delete">Delete</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permission_rationale">permission</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Email cannot be empty</string>
    <string name="error_invalid_email">Password cannot be empty</string>
    <string name="error_incorrect_password">Incorrect password</string>
</resources>
