<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/drawer_inbox" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/drawer_calendar" />

        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_project"
            android:title="@string/drawer_projects" />
    </group>

    <item
        android:id="@+id/nav_add_list"
        android:icon="@drawable/ic_add"
        android:title="@string/drawer_add_list"
        android:orderInCategory="100" />

</menu>
